--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "minimsg",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
